--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   },
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.1-rc.1",
+    "@types/js-cookie": "^2.2.6",
     "graphql-tag": "^2.10.3",
+    "i": "^0.3.6",
+    "js-cookie": "^2.2.1",
+    "npm": "^6.14.5",
     "nuxt": "^2.0.0",
-    "nuxt-property-decorator": "^2.7.2"
+    "nuxt-property-decorator": "^2.7.2",
+    "strapi-sdk-javascript": "^0.3.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.15.2",
